--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Build and Start Services
+      - name: Build and Start Service
         run: make up
 
       - name: Run Tests with pytest
@@ -42,5 +42,8 @@ jobs:
           . .venv/bin/activate
           pytest
 
-      - name: Stop Services and Remove Images
-        run: make down
+      - name: Stop Service
+        run: docker-compose down -v --remove-orphans
+
+      - name: Remove Images
+        run: docker rmi credit-policy_src
